Add mergeSort (WIP), fix tasks.json
Also add merge sort in python.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
         "${workspaceFolder}\\utils.h",
         "${workspaceFolder}\\sort.cpp",
         "${workspaceFolder}\\sort.h",
-        "${workspaceFolder}\\datastructs.h}",
+        "${workspaceFolder}\\datastructs.h",
         "-o",
         "${fileDirname}\\${fileBasenameNoExtension}.exe"
       ],
